# duikboot

./: Cargo.toml
.github/workflows/: build.yml  clippy.yml  format.yml
src/: main.rs  settings.rs
src/client/: settings.rs
src/client/entity/: camera.rs
src/components/: acceleration.rs
src/entity/: background.rs  bubble.rs  camera.rs  mod.rs  player.rs
src/network/: data.rs  init.rs  input.rs  mod.rs
src/resource/: texture.rs
src/utils/: mod.rs  submarine_gen.rs
