[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dev = ["bevy/dynamic"]

[dependencies]
rand = "0.8"     # 0.8.5
colorsys = "0.6" # 0.6.7


# Game engine
bevy = "0.9" # 0.9.1

# Plugins

# Physics engine
bevy_rapier2d = { version = "0.20", features = [
    "simd-stable",
    "parallel",
    "debug-render-2d",
] } # 0.20.0

# Debugging
bevy-inspector-egui = "0.17" # 0.17.0
bevy-inspector-egui-rapier = { version = "0.9", features = [
    "rapier2d",
] } # 0.9.0
bevy_prototype_debug_lines = "0.9" # 0.9.0


# Build opimizations
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
