[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dev = ["bevy/dynamic", "bevy_rapier2d/debug-render-2d"]

[dependencies]
rand = "0.8"
bevy = "0.9"
ggrs = "0.9"
structopt = "0.3"
bytemuck = "1.13"
bevy_ggrs = "0.11"
bevy_rapier2d = { version = "0.20", features = ["simd-stable", "parallel"] }

# Development
bevy-inspector-egui = "0.17"
bevy-inspector-egui-rapier = { version = "0.9", features = ["rapier2d"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
